Cleanup of pom.xml
* put each test category on a single line to improved readability
* removed superfluous <argLine> tag, which is not allowed for the Maven
  compiler plugin, just for the surefire plugin (so it should have no
  effect)